0x0A-python-inheritance/tests/1-my_list.txt
>>> MyList = __import__('1-my_list').MyList
>>> a = MyList()
>>> a.append(4)
>>> a.append(2)
>>> a.append(6)
>>> a.append(12)
>>> a.print_sorted()
[2, 4, 6, 12]
>>> a.append({})
>>> a.append([])
>>> a.append{-3}
Traceback (most recent call last):
    ...
    a.append{-3}
            ^
SyntaxError: invalid syntax
>>> a.append(-3)
>>> a.print_sorted()
Traceback (most recent call last):
    ...
TypeError: '<' not supported between instances of 'dict' and 'int'
>>> a.append(2)
>>> a.append(5)
>>> a.append("str")
>>> a.append( )
Traceback (most recent call last):
    ...
TypeError: list.append() takes exactly one argument (0 given)
>>> a.append( , )
Traceback (most recent call last):
    ...
    a.append( , )
              ^
SyntaxError: invalid syntax
>>> a.append(" " , )
>>> a.append(" " , 1526 )
Traceback (most recent call last):
    ...
TypeError: list.append() takes exactly one argument (2 given)
>>> a.append(" " , 1526 , {})
Traceback (most recent call last):
    ...
TypeError: list.append() takes exactly one argument (3 given)
>>> a.append([ ])
>>> a.print_sorted()
Traceback (most recent call last):
    ...
TypeError: '<' not supported between instances of 'dict' and 'int'
>>> a.clear()
>>> a.append("")
>>> a.append(45)
>>> a.print_sorted()
Traceback (most recent call last):
    ...
TypeError: '<' not supported between instances of 'int' and 'str'
>>> 